--- a/old/template/icon.html
+++ b/old/template/icon.html
@@ -6,7 +6,7 @@
     <title>图标</title>
     <link rel="stylesheet" type="text/css" href="../../common/highlight/style.css">
     <link rel="stylesheet" href="icon/iconfont.css">
-    <link rel="stylesheet" type="text/css" href="../common/main.css">
+    <link rel="stylesheet" type="text/css" href="../common/base.css">
     <style>
         body{
             padding: 10px;
